fixed edcation mobile section

--- a/src/components/Education/Fiu.css
+++ b/src/components/Education/Fiu.css
@@ -21,27 +21,35 @@
     .fiuContainer{
         display: flex;
         flex-direction: row;
+        justify-content: center;
         height: auto;
         width: 80%;
         margin-top: 0.9rem;
         padding: 10px;
     }
     .fiuCrest{
-        margin-right: 0.5rem;
-        margin-bottom: .5rem;
+        height: auto;
+        width: auto;
     }
     .fiuTitle{
         width: auto;
         height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        margin-left:10px;
     }
     .FIU{
         color: #081E3F;
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 700;
         font-family: 'Inter', sans-serif;
+        margin-top: 5px;
     }
     .GRAD{
-
+        font-size: 15px;
+        font-family: 'Inter', sans-serif;
     }
     .educationDescription{
         font-family: 'Inter', sans-serif;
@@ -83,6 +91,30 @@
         align-self: end;
         margin-top: 10px;
     }
+}
+
+@media only screen and (min-width: 630px) {
+    .fiuTitle{
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        margin-left:10px;
+    }
+    .FIU{
+        color: #081E3F;
+        font-size: 24px;
+        font-weight: 700;
+        font-family: 'Inter', sans-serif;
+        margin-top: 10px;
+    }
+    .GRAD{
+        font-size: 15px;
+        font-family: 'Inter', sans-serif;
+    }
+    
 }
 
 @media only screen and (min-width: 1000px) {
